--- a/webapp/404.html
+++ b/webapp/404.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-color-scheme="system">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ds.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="description" content="Page not found - The driver station web app.">
     <title>Page not found - Driver Station</title>
 </head>
