--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-color-scheme="system">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ds.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="description" content="The driver station web app.">
     <title>Driver Station</title>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
